cambiar bloque contenedor

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       
       <section class="contenido2">
         <h3>It's as yeezy as Kanye West.</h3>
-        <div class="contenido3">
+        <section class="contenido3">
           <section class="contenedor-texto">
           
             <h4>Search</h4>
@@ -87,7 +87,7 @@
           <section>
             <img src="./images/spotify-app.jpg" alt="kanye-west" width="350" height="600">
           </section>
-        </div>
+        </section>
       </section>
     </main>
 
