--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
       <img src="images/spotify-logo.png" alt="logo-spotify" width="250px">
       <nav>
         <ul class="navegacion">
-          <li>Premium</li>
-          <li>Discover</li>
-          <li>Help</li>
-          <li>Download</li>
+          <li><a href="">Premium</a></li>
+          <li><a href="">Discover</a></li>
+          <li><a href="">Help</a></li>
+          <li><a href="">Download</a></li>
         </ul>
       </nav>
     </header>
